<resources>
    <string name="app_name">BeeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_login">Sign in</string>
    <string name="api_key">AIzaSyAIrtmjxM3sA0wZTTbI_1hwCGAPJEwZd0Q</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="contato">Contato</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="informe_seu_nome">Informe seu Nome</string>
    <string name="telefone_para_contato">Telefone para Contato</string>
    <string name="whatsapp_para_contato">Whatsapp para Contato</string>
    <string name="todo">TODO</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="testar">Testar</string>
    <string name="galeria">Galeria</string>
    <string name="login">Login</string>
    <string name="reg_ocr">Registrar Ocorrência</string>
    <string name="reg_loc">Registrar Localização</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="carregar_imagem_1">Carregar Imagem 1</string>
    <string name="carregar_imagem_2">Carregar Imagem 2</string>
    <string name="primeira_imagem">Primeira Imagem</string>
    <string name="segunda_imagem">Segunda Imagem</string>
    <string name="logout">Logout</string>
    <string name="title_activity_ocorrencia_report">OcorrenciaReport</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="ocr_pendente">Ocorrências Pendentes</string>
    <string name="ocr_finalizada">Ocorrências Finalizadas</string>
    <string name="pesquisar_nome">Pesquisar Nome</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="carregar_primeira_imagem">Carregar primeira imagem</string>
    <string name="carregar_segunda_imagem">Carregar Segunda Imagem</string>
    <string name="ocr_report">Relatório de Ocorrências</string>

    <!-- Spinner Itens -->
    <array name="categories">
        <item>Equipamento</item>
        <item>Diversos</item>
    </array>

</resources>
